media/nzbhydra/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nzbhydra
  namespace: media
  annotations:
    flux.weave.works/tag.nzbhydra: glob:amd64-*-ls*
    flux.weave.works/automated: 'false'
spec:
  serviceName: nzbhydra
  replicas: 1
  selector:
    matchLabels:
      app: nzbhydra
  template:
    metadata:
      labels:
        app: nzbhydra
    spec:
      volumes:
      - name: nzbhydra-config
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:nzbhydra
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      containers:
      - name: nzbhydra
        image: linuxserver/hydra:amd64-0.2.233-ls12
        volumeMounts:
        - name: nzbhydra-config
          subPath: config
          mountPath: /config
        ports:
        - containerPort: 5075
          name: nzbhydra
        readinessProbe:
          tcpSocket:
            port: nzbhydra
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: nzbhydra
          initialDelaySeconds: 15
          periodSeconds: 20
