media/nzbhydra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbhydra
  namespace: media
spec:
  selector:
    app: nzbhydra
  ports:
  - port: 5075
    name: nzbhydra
    targetPort: nzbhydra
