media/nzbhydra/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nzbhydra
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://login.desertbluffs.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://login.desertbluffs.com/oauth2/start?rd=https://$host$escaped_request_uri"
spec:
  tls:
  - hosts:
    - i.desertbluffs.com
  rules:
  - host: i.desertbluffs.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nzbhydra
          servicePort: nzbhydra
